# linux-quiz-app

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
Resources/: builtin.csv
Sources/QuizApp/: ContentView.swift  Flashcard.swift  QuizViewModel.swift
linux_quiz_app/: cli.py
linux_quiz_app/data/: questions.json
